# url-map

./: Cargo.toml  README.md
.cursor/rules/: rust-development.mdc
docs/: architecture.mermaid  postgres_setup.md  status.md  technical.md  uhi-integration-spec.md
migrations/: 20240320000000_create_shortened_urls.sql
src/: config.rs  logging.rs  main.rs  routes.rs
src/errors/: mod.rs
src/handlers/: mod.rs  tests.rs
src/metrics/: middleware.rs  mod.rs
src/middleware/: logging.rs  mod.rs
src/models/: mod.rs
src/services/: mod.rs  tests.rs
src/storage/: memory.rs  mod.rs  postgres.rs
tasks/: tasks.md
tests/: server_startup.rs
