[package]
name = "url-map"
version = "0.1.0"
edition = "2021"
authors = ["Airesh Bhat <nelliairesh@gmail.com>"]
description = "A URL shortening service"
license = "MIT"
readme = "README.md"

[dependencies]
actix-web = "4.4.0"
actix-rt = "2.9.0"
tokio = { version = "1.32.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7.0"
env_logger = "0.10"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
thiserror = "1.0"
rand = "0.8"
async-trait = "0.1"
nanoid = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "json"] }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
